--- a/stylesheets/c7_speaker.css
+++ b/stylesheets/c7_speaker.css
@@ -45,7 +45,7 @@ header img {
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
-/* the styles for the navigation menu */
+
 #nav_menu ul {
 	list-style-type: none;
 	margin: 0;
@@ -84,7 +84,6 @@ header img {
     clear: both;
     display: block;
 }
-
 /* the styles for the section */
 section {
 	width: 525px;
@@ -95,10 +94,10 @@ section h1 {
 	font-size: 150%;
 	padding: .5em 0 .25em 0;
 	margin: 0;
+	color: #800000;
 }
 section h2 {
-	color: #800000;
-	font-size: 130%;
+	font-size: 100%;
 	padding: .5em 0 .25em 0;
 }
 section p {
@@ -110,7 +109,6 @@ section blockquote {
 }
 section ul {
 	padding: 0 0 .25em 1.25em;
-	list-style-type: circle;
 }
 section li {
 	padding-bottom: .35em;
@@ -119,8 +117,6 @@ section li {
 /* the styles for the article */
 article {
 	padding: .5em 0;
-	border-top: 2px solid #800000;
-	border-bottom: 2px solid #800000;
 }
 article h2 {
 	padding-top: 0;
@@ -132,7 +128,13 @@ article h3 {
 article img {
 	float: right;
 	margin: .5em 0 1em 1em;
+	margin-bottom: 0;
+	margin-left: 0; 
+	margin-top: 0; 
 	border: 1px solid black;
+	float : right; 
+	border: 1px black; 
+	
 }
 
 /* the styles for the aside */
@@ -141,12 +143,12 @@ aside {
 	float: right;
 	padding: 0 0 20px 20px;
 }
+
 aside h2 {
 	color: #800000;
 	font-size: 130%;
 	padding: .5em 0 .25em 0;
 }
-
 aside h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
